* faq.html: Properly uppercase SPARC.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2004-11-15  Gerald Pfeifer  <gerald@pfeifer.com>
+
+	* faq.html: Properly uppercase SPARC.
+
 2004-11-13  Tom Tromey  <tromey@redhat.com>
 
 	* libgcj-classpath-compare.html: Rebuilt.
