* index.html: Mention HPPA port and BC merge.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,7 @@
 2004-12-01  Tom Tromey  <tromey@redhat.com>
 
+	* index.html: Mention HPPA port and BC merge.
+
 	* libgcj-classpath-compare.html: Rebuilt.
 
 2004-11-26  Tom Tromey  <tromey@redhat.com>
@@ -14,17 +16,14 @@
 
 	* libgcj-classpath-compare.html: Rebuilt.
 
-<<<<<<< ChangeLog
 2004-11-14  Tom Tromey  <tromey@redhat.com>
 
 	* libgcj-classpath-compare.html: Rebuilt.
 
-=======
 2004-11-15  Gerald Pfeifer  <gerald@pfeifer.com>
 
 	* faq.html: Properly uppercase SPARC.
 
->>>>>>> 1.613
 2004-11-13  Tom Tromey  <tromey@redhat.com>
 
 	* libgcj-classpath-compare.html: Rebuilt.
