* index.html: HTML fixlets.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,5 +1,7 @@
 2004-12-01  Tom Tromey  <tromey@redhat.com>
 
+	* index.html: HTML fixlets.
+
 	* index.html: Mention HPPA port and BC merge.
 
 	* libgcj-classpath-compare.html: Rebuilt.
