* docs.html: Added link to API docs.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2005-01-20  Tom Tromey  <tromey@redhat.com>
+
+	* docs.html: Added link to API docs.
+
 2004-12-01  Tom Tromey  <tromey@redhat.com>
 
 	* index.html: HTML fixlets.
