* index.html: Adjust link to Linux Journal article on Eclipse.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-07  Gerald Pfeifer  <gerald@pfeifer.com>
+
+	* index.html: Adjust link to Linux Journal article on Eclipse.
+
 2005-01-20  Tom Tromey  <tromey@redhat.com>
 
 	* docs.html: Added link to API docs.
