--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-13  Gerald Pfeifer  <gerald@pfeifer.com>
+
+	* projects.html: Adjust Mozilla URL.
+
 2005-02-07  Gerald Pfeifer  <gerald@pfeifer.com>
 
 	* index.html: Adjust link to Linux Journal article on Eclipse.
