* index.html: Added news items.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-18  Tom Tromey  <tromey@redhat.com>
+
+	* index.html: Added news items.
+
 2005-02-13  Gerald Pfeifer  <gerald@pfeifer.com>
 
 	* projects.html: Adjust Mozilla URL.
