--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-23  Gerald Pfeifer  <gerald@pfeifer.com>
+
+	* index.html: Make link to /onlinedocs need to refer to gcc.gnu.org.
+
 2005-02-18  Tom Tromey  <tromey@redhat.com>
 
 	* index.html: Added news items.
