* done.html: Remove links to Freestyler Toolkit.

--- a/htdocs/java/ChangeLog
+++ b/htdocs/java/ChangeLog
@@ -1,3 +1,7 @@
+2005-04-30  Gerald Pfeifer  <gerald@pfeifer.com>
+
+	* done.html: Remove links to Freestyler Toolkit.
+
 2005-02-23  Gerald Pfeifer  <gerald@pfeifer.com>
 
 	* index.html: Make link to /onlinedocs need to refer to gcc.gnu.org.
